--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name     = Sys-Async-Virt-Connection-TLS
 abstract = TLS connectivity for Sys::Async::Virt
-version  = 0.0.1
+version  = 0.0.2
 author   = Erik Huelsmann <ehuels@gmail.com>
 copyright_holder = Erik Huelsmann
 main_module = lib/Sys/Async/Virt/Connection/TLS.pm
@@ -19,6 +19,7 @@ repository.type   = git
 [Git::GatherDir]
 [MetaJSON]
 [MetaProvides::Package]
+[MetaProvides::Class]
 [ContributorsFromGit]
 
 [Prereqs::FromCPANfile]
